--- a/colour.html
+++ b/colour.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="color.css">
+    <link rel="stylesheet" href=".color.css">
 </head>
 <body id="gradient">
     <div>
@@ -12,6 +12,6 @@
         <input type="color"  id="color2" oninput="Gradient()">
     </div>
     <h1 id="text">This is text</h1>
-    <script src="color.js"></script>
+    <script src=".color.js"></script>
 </body>
 </html>
